--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 .navbar {
   padding: 2rem;
-  background-color: #f5f6f7;
+  background-color: #dff9cf;
 }
 
 .navbar-collapse {
@@ -25,8 +25,8 @@ h1 {
 }
 
 .seccion-oscura {
-  color: white;
-  background-color: #1b1b32;
+  color: rgb(1, 0, 4);
+  background-color: #c0e897;
 }
 
 .seccion-clara {
@@ -42,7 +42,7 @@ h1 {
 
 .seccion-descripcion {
   font-size: 1.2rem;
-  color: #584e4e;
+  color: #095adc;
 }
 
 .seccion-texto {
@@ -65,7 +65,7 @@ h1 {
 /* Seccion Hero */
 
 .hero {
-  background-color: #f5f6f7;
+  background-color: #f7f5f5;
   min-height: 450px;
   text-align: center;
 }
@@ -334,29 +334,29 @@ footer {
   justify-content: center;
   padding: 2px;
   margin: 10px;
-  border: 2px solid white;
+  border: 2px solid rgb(9, 9, 9);
   border-radius: 50%;
   transition: all 0.2s ease-in;
 }
 
 .iconos-redes-sociales i {
-  color: white;
+  color: rgb(6, 6, 6);
   font-size: 1.5rem;
   transition: all 0.2s ease-in;
 }
 
 .iconos-redes-sociales a:hover {
-  background-color: white;
-  border: 2px solid rgb(13, 110, 253);
+  background-color: rgb(177, 194, 54);
+  border: 2px solid rgb(20, 110, 8);
 }
 
 .iconos-redes-sociales a:hover i {
-  color: black;
+  color: rgb(5, 5, 5);
 }
 
 .derechos-de-autor {
   font-size: 15px;
-  color: #aeaeae;
+  color: #230261;
   padding: 20px;
 }
 
@@ -393,4 +393,7 @@ footer {
   .hero-inferior-imagen {
     max-width: 600px;
   }
+}
+body{
+  color: #7ade30;
 }
